--- a/styles/mainUI_Style.css
+++ b/styles/mainUI_Style.css
@@ -24,14 +24,14 @@ We comment on */
   /* background-color: rgba(100, 100, 100, 0.7); */
 }
 #index_introduction_logo {
-  /*Image is located on the top of the index page*/
+  /*Logo Image is located on the top of the index page*/
   width: 20%;
   margin-top: 1.5%;
   margin-left: 11%;
   position: absolute;
 }
 #index_introduction_burger {
-  /*Image is located on the top of the index page*/
+  /*Burger Image is located on the top of the index page*/
   width: 3%;
   margin-top: 2.5%;
   margin-left: 6%;
@@ -42,4 +42,50 @@ li {
   float: left;
   text-decoration: none;
   list-style: none;
+}
+#End {
+  float: right;
+  position: absolute;
+  margin-left: 85%;
+}
+#index_search_input {
+  border-style: none;
+  text-align: center;
+  position: absolute;
+  font-family: "Oswald", sans-serif;
+  left: 10%;
+  top: 50%;
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+  border-radius: 50px;
+  width: 50%;
+  font-size: 350%;
+}
+#index_seach_lable {
+  border-style: solid;
+  text-align: center;
+  position: absolute;
+  font-family: "Oswald", sans-serif;
+  left: 65%;
+  top: 50%;
+  width: 20%;
+  font-size: 350%;
+}
+#index_introduction_menu {
+  margin-right: 7%;
+  margin-top: 3%;
+}
+li {
+  margin-left: 3%;
+  float: right;
+  font-size: 150%;
+}
+#index_main_lable {
+  text-align: center;
+  position: absolute;
+  font-family: "Bellota Text", cursive;
+  left: 30%;
+  top: 25%;
+  width: 40%;
+  font-size: 550%;
 }
