--- a/styles/mainUI_Style.css
+++ b/styles/mainUI_Style.css
@@ -53,7 +53,7 @@ li {
   text-align: center;
   position: absolute;
   font-family: "Oswald", sans-serif;
-  left: 10%;
+  left: 13%;
   top: 50%;
   -webkit-border-radius: 50px;
   -moz-border-radius: 50px;
@@ -66,7 +66,7 @@ li {
   text-align: center;
   position: absolute;
   font-family: "Oswald", sans-serif;
-  left: 65%;
+  left: 67%;
   top: 50%;
   width: 20%;
   font-size: 350%;
@@ -75,7 +75,7 @@ li {
   margin-right: 7%;
   margin-top: 3%;
 }
-li {
+#index_into_men {
   margin-left: 3%;
   float: right;
   font-size: 150%;
@@ -84,8 +84,29 @@ li {
   text-align: center;
   position: absolute;
   font-family: "Bellota Text", cursive;
-  left: 30%;
+  left: 28%;
   top: 25%;
   width: 40%;
   font-size: 550%;
+}
+#index_buttons {
+  position: absolute;
+  width: 100%;
+  float: left;
+}
+#index_btn {
+  margin-right: 5%;
+  font-size: 200%;
+  border-radius: 50px;
+  padding: 1%;
+  width: 15%;
+  text-align: center;
+  border-style: solid;
+  border-width: 5px;
+  font-weight: bold;
+  font-family: "Oswald", sans-serif;
+}
+#index_buttons {
+  top: 80%;
+  left: 5%;
 }
