--- a/styles/mainUI_Style.css
+++ b/styles/mainUI_Style.css
@@ -1,21 +1,25 @@
 body {
-  /*We are following a dark theme with white text*/
+  background-size: cover;
+  background-image: url("/Resources/background.jfif");
   background-color: RGB(28, 24, 24); /*TODO - Change at a later stage*/
   /*Margin to remove unneccecary space*/
   margin: 0;
   color: white;
+  background-attachment: fixed;
 }
 
+/*Disable Scrolling*/
+html,
+body {
+  margin: 0;
+  height: 100%;
+  overflow: hidden;
+}
 /*We name our Id's based on which file it originates fron, where on the
 page it is and what type it is
 
 We comment on */
-#index_introduction_image {
-  /*Image is located on the top of the index page*/
-  width: 100%;
-  position: absolute;
-  background-size: contain;
-}
+
 #index_introduction_top {
   /*Section is located on the top of the index page*/
   height: 20%;
@@ -49,6 +53,7 @@ li {
   margin-left: 85%;
 }
 #index_search_input {
+  outline: none;
   border-style: none;
   text-align: center;
   position: absolute;
@@ -60,8 +65,12 @@ li {
   border-radius: 50px;
   width: 50%;
   font-size: 350%;
+  letter-spacing: 2px;
 }
 #index_seach_lable {
+  color: white;
+
+  border-width: 5px;
   border-style: solid;
   text-align: center;
   position: absolute;
@@ -70,23 +79,33 @@ li {
   top: 50%;
   width: 20%;
   font-size: 350%;
+  letter-spacing: 5px;
+}
+#index_seach_lable:hover {
+  background-color: coral;
 }
 #index_introduction_menu {
   margin-right: 7%;
   margin-top: 3%;
 }
 #index_into_men {
+  color: white;
   margin-left: 3%;
   float: right;
   font-size: 150%;
+}
+#index_into_men:hover {
+  border-radius: 15px;
+  border-style: solid;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 #index_main_lable {
   text-align: center;
   position: absolute;
   font-family: "Bellota Text", cursive;
-  left: 28%;
   top: 25%;
-  width: 40%;
+  width: 100%;
   font-size: 550%;
 }
 #index_buttons {
@@ -95,6 +114,8 @@ li {
   float: left;
 }
 #index_btn {
+  color: white;
+  letter-spacing: 3px;
   margin-right: 5%;
   font-size: 200%;
   border-radius: 50px;
@@ -109,4 +130,99 @@ li {
 #index_buttons {
   top: 80%;
   left: 5%;
+}
+#index_btn:hover {
+  background-color: coral;
+}
+/* Code that allows for smaller screen opperation*/
+
+@media screen and (max-width: 1000px) {
+  #index_introduction_logo {
+    /*Logo Image is located on the top of the index page*/
+    width: 30%;
+    margin-top: 2%;
+    margin-left: 13%;
+    position: absolute;
+  }
+  #index_introduction_burger {
+    /*Burger Image is located on the top of the index page*/
+    width: 5%;
+    margin-top: 2.5%;
+    margin-left: 6%;
+    position: absolute;
+  }
+
+  #index_main_lable {
+    text-align: center;
+    font-family: "Bellota Text", cursive;
+    top: 15%;
+    width: 100%;
+    font-size: 250%;
+  }
+  #index_seach_lable {
+    border-width: 5px;
+    border-style: solid;
+    text-align: center;
+    font-family: "Oswald", sans-serif;
+    left: 35%;
+    top: 40%;
+    width: 30%;
+    font-size: 150%;
+    border-radius: 30px;
+    letter-spacing: 3px;
+    border-width: 2px;
+  }
+  #index_search_input {
+    letter-spacing: 2px;
+    height: 10%;
+    outline: none;
+    border-style: none;
+    text-align: center;
+    font-family: "Oswald", sans-serif;
+    left: 13%;
+    top: 55%;
+    -webkit-border-radius: 50px;
+    -moz-border-radius: 50px;
+    border-radius: 50px;
+    width: 75%;
+    font-size: 150%;
+  }
+  #index_introduction_menu {
+    margin-right: 7%;
+    margin-top: 3%;
+  }
+  #index_into_men {
+    margin-left: 3%;
+    float: right;
+    font-size: 100%;
+  }
+
+  #index_buttons {
+    width: 100%;
+  }
+
+  #index_btn {
+    font-size: 150%;
+    border-radius: 50px;
+    padding: 1%;
+    margin-bottom: 2%;
+    margin-left: 15%;
+    margin-right: 20%;
+    width: 60%;
+    text-align: center;
+    border-style: solid;
+    border-width: 1px;
+    font-size: larger;
+    letter-spacing: 3px;
+    font-family: "Bellota Text", cursive;
+  }
+  #index_buttons {
+    top: 70%;
+    left: 0%;
+  }
+  html,
+  body {
+    height: 100%;
+    overflow: auto;
+  }
 }
