--- a/styles/mainUI_Style.css
+++ b/styles/mainUI_Style.css
@@ -6,6 +6,7 @@ body {
   margin: 0;
   color: white;
   background-attachment: fixed;
+  user-select: none;
 }
 
 /*Disable Scrolling*/
@@ -53,8 +54,9 @@ li {
   margin-left: 85%;
 }
 #index_search_input {
+  border-color: gray;
+  border-width: 10px;
   outline: none;
-  border-style: none;
   text-align: center;
   position: absolute;
   font-family: "Oswald", sans-serif;
@@ -95,10 +97,7 @@ li {
   font-size: 150%;
 }
 #index_into_men:hover {
-  border-radius: 15px;
-  border-style: solid;
-  padding-left: 5px;
-  padding-right: 5px;
+  text-decoration: underline;
 }
 #index_main_lable {
   text-align: center;
