--- a/styles/contact_usUI_Style.css
+++ b/styles/contact_usUI_Style.css
@@ -1,169 +1,150 @@
-body 
-{
-    background-size: cover;
-    background-image: url("../Resources/background.jfif");
-    background-color: RGB(28, 24, 24); 
-    margin: 0;
-    color: white;
-    background-attachment: fixed;
-    user-select: none;
-    margin: 0;
-    height: 100%;
-    overflow: hidden;
+body {
+  background-size: cover;
+  background-image: url("../Resources/background.jfif");
+  background-color: RGB(28, 24, 24);
+  margin: 0;
+  color: white;
+  background-attachment: fixed;
+  user-select: none;
+  margin: 0;
+  height: 100%;
+  overflow: hidden;
 }
 
 body {
-    height: 100%;
-    overflow: auto;
+  height: 100%;
+  overflow: auto;
 }
 
-li 
-{
-    float: left;
-    text-decoration: none;
-    list-style: none;
+li {
+  float: left;
+  text-decoration: none;
+  list-style: none;
 }
 
-#contactMethods 
-{
-    position: absolute;
-    width: 100%;
-    float: left;
-    top: 30%;
-    left: 5%;
+#contactMethods {
+  position: absolute;
+  width: 100%;
+  float: left;
+  top: 30%;
+  left: 5%;
 }
 
-#info_link 
-{
-    color: white;
-    letter-spacing: 3px;
-    font-size: 150%;
-    border-radius: 50px;
-    padding: 1%;
-    margin-left: 5%;
-    margin-right: 5%;
-    margin-bottom: 4%;
-    width: 80%;
-    text-align: center;
-    border-style: solid;
-    border-width: 1px;
-    letter-spacing: 3px;
-    font-family: "Oswald", sans-serif;
+#info_link {
+  color: white;
+  letter-spacing: 3px;
+  font-size: 150%;
+  border-radius: 50px;
+  padding: 1%;
+  margin-left: 5%;
+  margin-right: 5%;
+  margin-bottom: 4%;
+  width: 80%;
+  text-align: center;
+  border-style: solid;
+  border-width: 1px;
+  letter-spacing: 3px;
+  font-family: "Oswald", sans-serif;
 }
 
 #index_main_lable {
-    text-align: center;
-    position: absolute;
-    font-family: "Bellota Text";
-    top: 20%;
-    width: 100%;
-    font-size: 180%;
+  text-align: center;
+  position: absolute;
+  font-family: "Bellota Text";
+  top: 20%;
+  width: 100%;
+  font-size: 180%;
 }
 
-#info_link:hover 
-{
-    background-color: coral;
-}
-
-#msg_label {
-    text-align: center;
-    position: absolute;
-    font-family: "Bellota Text";
-    top: 58%;
-    width: 100%;
-    font-size: 180%;
-}
-
-#index_introduction_top 
-{
-    height: 20%;
-    width: 100%;
-    position: absolute;
-     
-}
-
-#index_introduction_logo 
-{
-    width: 25%;
-    margin-top: 1%;
-    margin-left: 6%;
-    position: absolute;
-}
-
-#index_introduction_menu 
-{
-    margin-right: 7%;
-    margin-top: 3%;
-}
-
-#main_menu {
-    color: white;
-    margin-left: 3%;
-    float: right;
-    font-size: 150%;
-}
-
-#main_menu:hover 
-{
+#info_link:hover {
   background-color: coral;
 }
 
-#message_input {
-    border-color: gray;
-    border-width: 5px;
-    outline: none;
-    text-align: left;
-    position: absolute;
-    font-family: "Oswald", sans-serif;
-    left: 23%;
-    top: 80%;
-    border-radius: 20px;
-    width: 50%;
-    font-size: 100%;
-    letter-spacing: 2px;
-    height: 15%;
+#msg_label {
+  text-align: center;
+  position: absolute;
+  font-family: "Bellota Text";
+  top: 58%;
+  width: 100%;
+  font-size: 180%;
 }
 
-#message_input:hover 
- {
-   background-color: lightgray;
- }
+#index_introduction_top {
+  height: 20%;
+  width: 100%;
+  position: absolute;
+}
+
+#index_introduction_logo {
+  width: 25%;
+  margin-top: 1%;
+  margin-left: 6%;
+  position: absolute;
+}
+
+#index_introduction_menu {
+  margin-right: 7%;
+  margin-top: 3%;
+}
+
+#main_menu {
+  color: white;
+  margin-left: 3%;
+  float: right;
+  font-size: 150%;
+}
+
+#main_menu:hover {
+  text-decoration: underline;
+}
+
+#message_input {
+  border-color: gray;
+  border-width: 5px;
+  outline: none;
+  text-align: left;
+  position: absolute;
+  font-family: "Oswald", sans-serif;
+  left: 23%;
+  top: 80%;
+  border-radius: 20px;
+  width: 50%;
+  font-size: 100%;
+  letter-spacing: 2px;
+  height: 15%;
+}
 
 #msg_info {
-    text-align: center;
-    position: absolute;
-    font-family: "Oswald", sans-serif;
-    top: 65%;
-    width: 100%;
-    font-size: 120%;
+  text-align: center;
+  position: absolute;
+  font-family: "Oswald", sans-serif;
+  top: 65%;
+  width: 100%;
+  font-size: 120%;
 }
 
 #submit_lable {
-    color: white;
-    border-style: solid;
-    border-width: 1px;
-    border-radius: 50px;
-    text-align: center;
-    position: absolute;
-    font-family: "Oswald", sans-serif;
-    top: 80%;
-    left: 2%;
-    font-size: 120%;
-    padding: 1%;
-    
+  color: white;
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 50px;
+  text-align: center;
+  position: absolute;
+  font-family: "Oswald", sans-serif;
+  top: 80%;
+  left: 2%;
+  font-size: 120%;
+  padding: 1%;
 }
 
-#submit_lable:hover 
-    {
-        background-color: coral;
-    }
-
-#sign_link
-{
-    color: white;
+#submit_lable:hover {
+  background-color: coral;
 }
 
-#sign_link:hover
-{
-    background-color: coral;
+#sign_link {
+  color: white;
+}
+
+#sign_link:hover {
+  background-color: coral;
 }
