--- a/styles/sign_inUI_Style.css
+++ b/styles/sign_inUI_Style.css
@@ -1,182 +1,147 @@
-body 
-{
-    background-size: cover;
-    background-image: url("../Resources/background.jfif");
-    background-color: RGB(28, 24, 24);
-    margin: 0;
-    color: white;
-    background-attachment: fixed;
-    user-select: none;
-    margin: 0;
-    height: 100%;
-    overflow: hidden;
+body {
+  background-size: cover;
+  background-image: url("../Resources/background.jfif");
+  background-color: RGB(28, 24, 24);
+  margin: 0;
+  color: white;
+  background-attachment: fixed;
+  user-select: none;
+  margin: 0;
+  height: 100%;
+  overflow: hidden;
 }
 
-body
-{
-    height: 100%;
-    overflow: auto;
+body {
+  height: 100%;
+  overflow: auto;
 }
 
-li 
-{
-    
-    text-decoration: none;
-    list-style: none;
-
+li {
+  text-decoration: none;
+  list-style: none;
+}
+a {
+  text-decoration: none;
+}
+#index_introduction_top {
+  height: 20%;
+  width: 100%;
+  position: absolute;
 }
 
-#index_introduction_top 
-{
-    height: 20%;
-    width: 100%;
-    position: absolute;
+#index_introduction_logo {
+  width: 25%;
+  margin-top: 1%;
+  margin-left: 6%;
+  position: absolute;
 }
 
-#index_introduction_logo 
-{
-    width: 25%;
-    margin-top: 1%;
-    margin-left: 6%;
-    position: absolute;
+#index_introduction_menu {
+  margin-right: 7%;
+  margin-top: 3%;
 }
 
-#index_introduction_menu 
-{
-    margin-right: 7%;
-    margin-top: 3%;
+#main_menu {
+  color: white;
+  margin-left: 3%;
+  float: right;
+  font-size: 150%;
 }
 
-#main_menu 
-{
-    color: white;
-    margin-left: 3%;
-    float: right;
-    font-size: 150%;
+#main_menu:hover {
+  text-decoration: underline;
 }
-
-#main_menu:hover 
-{
-     background-color: coral;
+#client_info::placeholder {
+  color: white;
 }
 
 #client_info {
-    color: black;
-    border-color: white;
-    letter-spacing: 3px;
-    border-radius: 50px;
-    padding: 1%;
-    margin-left: 2%;
-    margin-right: 2%;
-    margin-bottom: 2%;
-    width: 60%;
-    text-align: left;
-    border-style: solid;
-    border-width: 1px;
-    letter-spacing: 3px;
-    font-family: "Oswald", sans-serif;
-    font-size: 130%;
+  /* properties of the text fields */
+  color: white;
+  background: none;
+  outline: none;
+  text-align: left;
+  letter-spacing: 3px;
+  padding: 1%;
+  border-top-style: none;
+  border-right-style: none;
+  border-top-left-radius: 30px;
+  border-bottom-left-radius: 30px;
+  margin-left: 2%;
+  margin-right: 2%;
+  margin-top: 2%;
+  width: 60%;
+  border-width: 4px;
+  letter-spacing: 1px;
+  font-family: "Oswald", sans-serif;
+  font-size: 130%;
 }
 
 #info_list {
-    text-align: center;
-    position: absolute;
-    top: 26%;
-    width: 100%;
-  
+  /* location of the text fields 
+  TODO - Polish down a bit*/
+  text-align: center;
+  position: absolute;
+  top: 40%;
+  width: 100%;
 }
 
-#index_main_lable {
-    text-align: center;
-    position: absolute;
-    font-family: "Bellota Text";
-    top: 20%;
-    width: 100%;
-    font-size: 180%;
+#signin_main_lable {
+  text-align: center;
+  position: absolute;
+  font-family: "Bellota Text";
+  top: 15%;
+  width: 100%;
+  font-size: 300%;
+  letter-spacing: 2px;
 }
-
-#client_info:hover {
-    background-color: lightgray;
+#signin_btn:hover {
+  background-color: coral;
 }
-
-#create_account_hedder {
-    text-align: center;
-    position: absolute;
-    font-family: "Bellota Text";
-    top: 65%;
-    width: 100%;
-    font-size: 180%;
+#reg_btn:hover {
+  background-color: coral;
 }
-
-#create_info {
-    text-align: center;
-    position: absolute;
-    top: 70%;
-    width: 100%;
+#signin_btn {
+  color: white;
+  letter-spacing: 3px;
+  font-size: 200%;
+  border-radius: 50px;
+  padding: 1%;
+  text-align: center;
+  border-style: solid;
+  border-width: 1px;
+  font-weight: bold;
+  font-family: "Oswald", sans-serif;
+  position: relative;
+  width: 100%;
+  padding: 3%;
 }
-
-#create_information {
-    color: black;
-    border-color: white;
-    letter-spacing: 3px;
-    border-radius: 50px;
-    padding: 1%;
-    margin-left: 2%;
-    margin-right: 2%;
-    margin-bottom: 2%;
-    width: 60%;
-    text-align: left;
-    border-style: solid;
-    border-width: 1px;
-    letter-spacing: 3px;
-    font-family: "Oswald", sans-serif;
-    font-size: 130%;
+#reg_btn {
+  color: white;
+  letter-spacing: 3px;
+  font-size: 200%;
+  border-radius: 50px;
+  padding: 1%;
+  text-align: center;
+  border-style: solid;
+  border-width: 1px;
+  font-weight: bold;
+  font-family: "Oswald", sans-serif;
+  position: relative;
+  width: 100%;
+  padding: 3%;
 }
-
-#create_information:hover 
-{
-        background-color: lightgray;
-
+#signin_button_reg {
+  position: absolute;
+  top: 75%;
+  left: 25%;
+  width: 20%;
+  float: left;
 }
-
-#verification_button {
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    width: 100%;
-}
-
-#submit_info {
-    border-color: gray;
-    border-width: 5px;
-    outline: none;
-    text-align: center;
-    font-family: "Oswald", sans-serif;
-    border-radius: 20px;
-    width: 20%;
-    font-size: 120%;
-    letter-spacing: 2px;
-    padding: 1%;  
-}
-
-#create_account_btn {
-    text-align: center;
-    position: absolute;
-    top: 95%;
-    width: 100%;
-    bottom:5px;
-}
-
-#create {
-    border-color: gray;
-    border-width: 5px;
-    outline: none;
-    text-align: center;
-    font-family: "Oswald", sans-serif;
-    border-radius: 20px;
-    width: 20%;
-    font-size: 120%;
-    letter-spacing: 2px;
-    padding: 1%;
-   
+#signin_button_signin {
+  position: absolute;
+  top: 75%;
+  left: 55%;
+  width: 20%;
+  float: left;
 }
