Updates Contact Us Page

--- a/styles/contact_usUI_Style.css
+++ b/styles/contact_usUI_Style.css
@@ -1,3 +1,5 @@
+/*TODO Make the website actually look good*/
+
 body {
   background-size: cover;
   background-image: url("../Resources/background.jfif");
@@ -22,50 +24,11 @@ li {
   list-style: none;
 }
 
-#contactMethods {
-  position: absolute;
-  width: 100%;
-  float: left;
-  top: 30%;
-  left: 5%;
-}
-
-#info_link {
-  color: white;
-  letter-spacing: 3px;
-  font-size: 150%;
-  border-radius: 50px;
-  padding: 1%;
-  margin-left: 5%;
-  margin-right: 5%;
-  margin-bottom: 4%;
-  width: 80%;
-  text-align: center;
-  border-style: solid;
-  border-width: 1px;
-  letter-spacing: 3px;
-  font-family: "Oswald", sans-serif;
-}
-
 #index_main_lable {
-  text-align: center;
   position: absolute;
   font-family: "Bellota Text";
-  top: 20%;
-  width: 100%;
-  font-size: 180%;
-}
-
-#info_link:hover {
-  background-color: coral;
-}
-
-#msg_label {
-  text-align: center;
-  position: absolute;
-  font-family: "Bellota Text";
-  top: 58%;
-  width: 100%;
+  top: 25%;
+  left: 63%;
   font-size: 180%;
 }
 
@@ -78,7 +41,7 @@ li {
 #index_introduction_logo {
   width: 25%;
   margin-top: 1%;
-  margin-left: 6%;
+  margin-left: 2%;
   position: absolute;
 }
 
@@ -93,58 +56,80 @@ li {
   float: right;
   font-size: 150%;
 }
-
-#main_menu:hover {
-  text-decoration: underline;
-}
-
-#message_input {
-  border-color: gray;
-  border-width: 5px;
-  outline: none;
-  text-align: left;
-  position: absolute;
-  font-family: "Oswald", sans-serif;
-  left: 23%;
-  top: 80%;
+#chatbot {
+  width: 30%;
   border-radius: 20px;
-  width: 50%;
-  font-size: 100%;
-  letter-spacing: 2px;
-  height: 15%;
+  background-color: rgba(0, 0, 0, 0.472);
+  color: white;
+  font-weight: bold;
+  letter-spacing: 3px;
+  padding: 1%;
+  text-align: center;
+  height: 50%;
+  position: absolute;
+  font-size: x-large;
+  top: 40%;
+  left: 60%;
+  outline: none;
+  border-width: 4px;
+  border-color: white;
 }
-
-#msg_info {
+#chatbot_responce {
+  height: 150px;
+  left: 28%;
+  top: 13%;
+  width: 27%;
+  font-size: large;
+  background: none;
+  outline: none;
+  border: none;
+  color: white;
+  position: absolute;
+  text-align: center;
+  padding: 35px 0;
   text-align: center;
   position: absolute;
-  font-family: "Oswald", sans-serif;
-  top: 65%;
-  width: 100%;
-  font-size: 120%;
+  font-family: "Bellota Text";
+  font-size: 150%;
+}
+#HelpfullUser {
+  position: absolute;
+  height: 100%;
+  float: left;
+  width: 60%;
 }
 
-#submit_lable {
-  color: white;
+#contact_btn {
+  font-size: 250%;
+  border-radius: 50px;
+  padding: 1%;
+  margin-left: 5%;
+  margin-right: 5%;
+  margin-bottom: 4%;
+  width: 60%;
+  text-align: center;
   border-style: solid;
   border-width: 1px;
-  border-radius: 50px;
-  text-align: center;
+  font-size: larger;
+  letter-spacing: 3px;
+  font-family: "Bellota Text", cursive;
+  outline: none;
+}
+#contact_btn:hover {
+  background-color: coral;
+}
+#btn_pos {
   position: absolute;
-  font-family: "Oswald", sans-serif;
   top: 80%;
-  left: 2%;
-  font-size: 120%;
-  padding: 1%;
+  left: 40%;
+  transform: rotate(-40deg);
+  transform-origin: 20% 40%;
 }
-
-#submit_lable:hover {
-  background-color: coral;
-}
-
-#sign_link {
-  color: white;
-}
-
-#sign_link:hover {
-  background-color: coral;
+h1 {
+  font-size: 300%;
+  position: absolute;
+  transform: rotate(-40deg);
+  transform-origin: 20% 40%;
+  top: 57%;
+  left: 40%;
 }
