--- a/styles/sign_inUI_Style.css
+++ b/styles/sign_inUI_Style.css
@@ -159,3 +159,154 @@ desktop version once the screen size goes large enough
 
 @media screen and (max-width: 1000px) {
 }
+
+body {
+  background-size: cover;
+  background-image: url("../Resources/background.jfif");
+  background-color: RGB(28, 24, 24);
+  margin: 0;
+  color: white;
+  background-attachment: fixed;
+  user-select: none;
+  margin: 0;
+  height: 100%;
+  overflow: hidden;
+}
+
+body {
+  height: 100%;
+  overflow: auto;
+}
+
+li {
+  text-decoration: none;
+  list-style: none;
+}
+a {
+  text-decoration: none;
+}
+#index_introduction_top {
+  height: 20%;
+  width: 100%;
+  position: absolute;
+}
+
+#index_introduction_logo {
+  width: 25%;
+  margin-top: 1%;
+  margin-left: 6%;
+  position: absolute;
+}
+
+#index_introduction_menu {
+  margin-right: 7%;
+  margin-top: 3%;
+}
+
+#main_menu {
+  color: white;
+  margin-left: 3%;
+  float: right;
+  font-size: 150%;
+}
+
+#main_menu:hover {
+  text-decoration: underline;
+}
+#client_info::placeholder {
+  color: white;
+}
+
+#client_info {
+  /* properties of the text fields */
+  color: white;
+  background: none;
+  outline: none;
+  text-align: left;
+  letter-spacing: 3px;
+  padding: 1%;
+  border-top-style: none;
+  border-right-style: none;
+  border-top-left-radius: 30px;
+  border-bottom-left-radius: 30px;
+  margin-left: 2%;
+  margin-right: 2%;
+  margin-top: 2%;
+  width: 60%;
+  border-width: 4px;
+  letter-spacing: 1px;
+  font-family: "Oswald", sans-serif;
+  font-size: 130%;
+}
+
+#info_list {
+  /* location of the text fields 
+  TODO - Polish down a bit*/
+  text-align: center;
+  position: absolute;
+  top: 55%;
+  width: 100%;
+}
+
+#signin_main_lable {
+  text-align: center;
+  position: absolute;
+  font-family: "Bellota Text";
+  top: 8%;
+  width: 100%;
+  font-size: 300%;
+  letter-spacing: 2px;
+}
+#signin_btn:hover {
+  background-color: coral;
+}
+#reg_btn:hover {
+  background-color: coral;
+}
+
+#signin_btn {
+  color: white;
+  letter-spacing: 3px;
+  font-size: 200%;
+  border-radius: 50px;
+  padding: 1%;
+  text-align: center;
+  border-style: solid;
+  border-width: 1px;
+  font-weight: bold;
+  font-family: "Oswald", sans-serif;
+  position: relative;
+  width: 300%;
+  padding: 3%;
+}
+
+#reg_btn {
+  color: white;
+  letter-spacing: 3px;
+  font-size: 200%;
+  border-radius: 50px;
+  padding: 1%;
+  text-align: center;
+  border-style: solid;
+  border-width: 1px;
+  font-weight: bold;
+  font-family: "Oswald", sans-serif;
+  position: relative;
+  width: 400%;
+  padding: 3%;
+}
+#signin_button_reg {
+  position: absolute;
+  top: 75%;
+  left: 0%;
+  width: 20%;
+  float: left;
+}
+
+#signin_button_signin {
+  position: absolute;
+  top: 75%;
+  left: 50%;
+  width: 20%;
+  float: left;
+}
