--- a/styles/mainUI_Style.css
+++ b/styles/mainUI_Style.css
@@ -1,224 +1,244 @@
 body {
-  background-size: cover;
-  background-image: url("../Resources/background.jfif");
-  background-color: RGB(28, 24, 24); /*TODO - Change at a later stage*/
-  /*Margin to remove unneccecary space*/
-  margin: 0;
-  color: white;
-  background-attachment: fixed;
-  user-select: none;
+    background-size: cover;
+    background-image: url("../Resources/background.webp");
+    background-color: RGB(28, 24, 24);
+    /*TODO - Change at a later stage*/
+    /*Margin to remove unneccecary space*/
+    margin: 0;
+    color: white;
+    background-attachment: fixed;
+    user-select: none;
 }
 
+
 /*Disable Scrolling*/
+
 html,
 body {
-  margin: 0;
-  height: 100%;
-  overflow: hidden;
+    margin: 0;
+    height: 100%;
+    overflow: hidden;
 }
+
+
 /*We name our Id's based on which file it originates fron, where on the
 page it is and what type it is
 
 We comment on */
 
 #index_introduction_top {
-  /*Section is located on the top of the index page*/
-  height: 20%;
-  width: 100%;
-  position: absolute;
-  /* background-color: rgba(100, 100, 100, 0.7); */
-}
-#index_introduction_logo {
-  /*Logo Image is located on the top of the index page*/
-  width: 20%;
-  margin-top: 1.5%;
-  margin-left: 11%;
-  position: absolute;
-}
-#index_introduction_burger {
-  /*Burger Image is located on the top of the index page*/
-  width: 3%;
-  margin-top: 2.5%;
-  margin-left: 6%;
-  position: absolute;
-}
-li {
-  /*This orders the lists in a relativly neat agle*/
-  float: left;
-  text-decoration: none;
-  list-style: none;
-}
-#End {
-  float: right;
-  position: absolute;
-  margin-left: 85%;
-}
-#index_search_input {
-  border-color: gray;
-  border-width: 10px;
-  outline: none;
-  text-align: center;
-  position: absolute;
-  font-family: "Oswald", sans-serif;
-  left: 13%;
-  top: 50%;
-  -webkit-border-radius: 50px;
-  -moz-border-radius: 50px;
-  border-radius: 50px;
-  width: 50%;
-  font-size: 350%;
-  letter-spacing: 2px;
-}
-#index_seach_lable {
-  color: white;
-
-  border-width: 5px;
-  border-style: solid;
-  text-align: center;
-  position: absolute;
-  font-family: "Oswald", sans-serif;
-  left: 67%;
-  top: 50%;
-  width: 20%;
-  font-size: 350%;
-  letter-spacing: 5px;
-}
-#index_seach_lable:hover {
-  background-color: coral;
-}
-#index_introduction_menu {
-  margin-right: 7%;
-  margin-top: 3%;
-}
-#index_into_men {
-  color: white;
-  margin-left: 3%;
-  float: right;
-  font-size: 150%;
-}
-#index_into_men:hover {
-  text-decoration: underline;
-}
-#index_main_lable {
-  text-align: center;
-  position: absolute;
-  font-family: "Bellota Text", cursive;
-  top: 25%;
-  width: 100%;
-  font-size: 550%;
-}
-#index_buttons {
-  position: absolute;
-  width: 100%;
-  float: left;
-}
-#index_btn {
-  color: white;
-  letter-spacing: 3px;
-  margin-right: 5%;
-  font-size: 200%;
-  border-radius: 50px;
-  padding: 1%;
-  width: 15%;
-  text-align: center;
-  border-style: solid;
-  border-width: 5px;
-  font-weight: bold;
-  font-family: "Oswald", sans-serif;
-}
-#index_buttons {
-  top: 80%;
-  left: 5%;
-}
-#index_btn:hover {
-  background-color: coral;
-}
-/* Code that allows for smaller screen opperation*/
-
-@media screen and (max-width: 1000px) {
-  #index_introduction_logo {
-    /*Logo Image is located on the top of the index page*/
-    width: 30%;
-    margin-top: 2%;
-    margin-left: 13%;
+    /*Section is located on the top of the index page*/
+    height: 20%;
+    width: 100%;
     position: absolute;
-  }
-  #index_introduction_burger {
+    /* background-color: rgba(100, 100, 100, 0.7); */
+}
+
+#index_introduction_logo {
+    /*Logo Image is located on the top of the index page*/
+    width: 20%;
+    margin-top: 1.5%;
+    margin-left: 11%;
+    position: absolute;
+}
+
+#index_introduction_burger {
     /*Burger Image is located on the top of the index page*/
-    width: 5%;
+    width: 3%;
     margin-top: 2.5%;
     margin-left: 6%;
     position: absolute;
-  }
+}
 
-  #index_main_lable {
-    text-align: center;
-    font-family: "Bellota Text", cursive;
-    top: 15%;
-    width: 100%;
-    font-size: 50px;
-    letter-spacing: 10px;
-  }
-  #index_seach_lable {
-    border-width: 5px;
-    border-style: solid;
-    text-align: center;
-    font-family: "Oswald", sans-serif;
-    left: 25%;
-    top: 50%;
-    width: 50%;
-    font-size: 150%;
-    letter-spacing: 3px;
-    border-width: 2px;
-  }
-  #index_search_input {
-    letter-spacing: 2px;
-    height: 40px;
+li {
+    /*This orders the lists in a relativly neat agle*/
+    float: left;
+    text-decoration: none;
+    list-style: none;
+}
+
+#End {
+    float: right;
+    position: absolute;
+    margin-left: 85%;
+}
+
+#index_search_input {
+    border-color: gray;
+    border-width: 10px;
     outline: none;
-    border-style: none;
     text-align: center;
-    font-family: "Oswald", sans-serif; /*TODO fix bug where seach bar moves into sales bar when keyboard shows */
-    left: 5%;
-    top: 35%;
+    position: absolute;
+    font-family: "Oswald", sans-serif;
+    left: 13%;
+    top: 50%;
     -webkit-border-radius: 50px;
     -moz-border-radius: 50px;
     border-radius: 50px;
-    width: 90%;
-    font-size: 150%;
-  }
-  #index_introduction_menu {
+    width: 50%;
+    font-size: 350%;
+    letter-spacing: 2px;
+}
+
+#index_seach_lable {
+    color: white;
+    border-width: 5px;
+    border-style: solid;
+    text-align: center;
+    position: absolute;
+    font-family: "Oswald", sans-serif;
+    left: 67%;
+    top: 50%;
+    width: 20%;
+    font-size: 350%;
+    letter-spacing: 5px;
+}
+
+#index_seach_lable:hover {
+    background-color: coral;
+}
+
+#index_introduction_menu {
     margin-right: 7%;
     margin-top: 3%;
-  }
-  #index_into_men {
+}
+
+#index_into_men {
+    color: white;
     margin-left: 3%;
     float: right;
-    font-size: 100%;
-  }
-
-  #index_btn {
     font-size: 150%;
+}
+
+#index_into_men:hover {
+    text-decoration: underline;
+}
+
+#index_main_lable {
+    text-align: center;
+    position: absolute;
+    font-family: "Bellota Text", cursive;
+    top: 25%;
+    width: 100%;
+    font-size: 550%;
+}
+
+#index_buttons {
+    position: absolute;
+    width: 100%;
+    float: left;
+}
+
+#index_btn {
+    color: white;
+    letter-spacing: 3px;
+    margin-right: 5%;
+    font-size: 200%;
     border-radius: 50px;
     padding: 1%;
-    margin-left: 5%;
-    margin-right: 5%;
-    margin-bottom: 4%;
-    width: 80%;
+    width: 15%;
     text-align: center;
     border-style: solid;
-    border-width: 1px;
-    font-size: larger;
-    letter-spacing: 3px;
-    font-family: "Bellota Text", cursive;
-  }
-  #index_buttons {
-    top: 60%;
-    left: 0%;
-    width: 100%;
-  }
-  html,
-  body {
-    height: 100%;
-    overflow: auto;
-  }
+    border-width: 5px;
+    font-weight: bold;
+    font-family: "Oswald", sans-serif;
+}
+
+#index_buttons {
+    top: 80%;
+    left: 5%;
+}
+
+#index_btn:hover {
+    background-color: coral;
+}
+
+
+/* Code that allows for smaller screen opperation*/
+
+@media screen and (max-width: 1000px) {
+    #index_introduction_logo {
+        /*Logo Image is located on the top of the index page*/
+        width: 30%;
+        margin-top: 2%;
+        margin-left: 13%;
+        position: absolute;
+    }
+    #index_introduction_burger {
+        /*Burger Image is located on the top of the index page*/
+        width: 5%;
+        margin-top: 2.5%;
+        margin-left: 6%;
+        position: absolute;
+    }
+    #index_main_lable {
+        text-align: center;
+        font-family: "Bellota Text", cursive;
+        top: 15%;
+        width: 100%;
+        font-size: 50px;
+        letter-spacing: 10px;
+    }
+    #index_seach_lable {
+        border-width: 5px;
+        border-style: solid;
+        text-align: center;
+        font-family: "Oswald", sans-serif;
+        left: 25%;
+        top: 50%;
+        width: 50%;
+        font-size: 150%;
+        letter-spacing: 3px;
+        border-width: 2px;
+    }
+    #index_search_input {
+        letter-spacing: 2px;
+        height: 40px;
+        outline: none;
+        border-style: none;
+        text-align: center;
+        font-family: "Oswald", sans-serif;
+        /*TODO fix bug where seach bar moves into sales bar when keyboard shows */
+        left: 5%;
+        top: 35%;
+        -webkit-border-radius: 50px;
+        -moz-border-radius: 50px;
+        border-radius: 50px;
+        width: 90%;
+        font-size: 150%;
+    }
+    #index_introduction_menu {
+        margin-right: 7%;
+        margin-top: 3%;
+    }
+    #index_into_men {
+        margin-left: 3%;
+        float: right;
+        font-size: 100%;
+    }
+    #index_btn {
+        font-size: 150%;
+        border-radius: 50px;
+        padding: 1%;
+        margin-left: 5%;
+        margin-right: 5%;
+        margin-bottom: 4%;
+        width: 80%;
+        text-align: center;
+        border-style: solid;
+        border-width: 1px;
+        font-size: larger;
+        letter-spacing: 3px;
+        font-family: "Bellota Text", cursive;
+    }
+    #index_buttons {
+        top: 60%;
+        left: 0%;
+        width: 100%;
+    }
+    html,
+    body {
+        height: 100%;
+        overflow: auto;
+    }
 }
