--- a/styles/membership.css
+++ b/styles/membership.css
@@ -1,8 +1,61 @@
-body{
+
+
+body {
+    background-size: cover;
     background-image: url("../Resources/background.webp");
+    background-color: RGB(28, 24, 24);
+    /*TODO - Change at a later stage*/
+    /*Margin to remove unneccecary space*/
+    margin: 0;
+    color: white;
+    background-attachment: fixed;
+    user-select: none;
+    font-size: 120%;
+    font-family: "Oswald", sans-serif;
+}
+
+section{
+    padding-left: 40%;
+    padding-top: 2%;
+    
     
 }
-section{ border: 2mm;
-
+button{
+    
+    letter-spacing: 3px;
+    font-size: 150%;
+    border-radius: 50px;
+    padding: 1%;
+    text-align: center;
+    border-style: solid;
+    border-width: 1px;
+    font-weight: bold;
+    font-family: "Oswald", sans-serif;
+}
+button:hover{
+    background-color: coral;
 
 }
+#index_introduction_logo{
+    width: 20%;
+    margin-top: 1.5%;
+    margin-left: 11%;
+    position: absolute;
+}
+#main_menu {
+    color: white;
+    margin-left: 0%;
+    float: right;
+    font-size: 120%;
+    list-style:none ;
+    padding-right: 10%;
+    padding-top: 2%;
+}
+#main_menu:hover {
+    text-decoration: underline;
+}
+    
+
+
+
+    
