--- a/styles/membership.css
+++ b/styles/membership.css
@@ -1,5 +1,3 @@
-
-
 body {
     background-size: cover;
     background-image: url("../Resources/background.webp");
@@ -14,48 +12,85 @@ body {
     font-family: "Oswald", sans-serif;
 }
 
-section{
-    padding-left: 40%;
-    padding-top: 2%;
-    
-    
+section {
+    text-align: center;
+    padding-top: 1%;
+    padding-bottom: 2%;
+    border-color: white;
+    margin-bottom: 3%;
 }
-button{
-    
+
+h1 {
+    text-align: center;
+    font-size: 170%;
+    margin-top: 8%;
+    margin-left: 20%;
+    margin-right: 20%;
+}
+
+#free {
+    margin-left: 5%;
+    margin-right: 70%;
+    margin-top: 6%;
+    border-width: 3px;
+    border-style: solid;
+    border-radius: 30px;
+    position: absolute;
+}
+
+#Premium {
+    margin-left: 35%;
+    margin-right: 40%;
+    margin-top: 5%;
+    border-width: 3px;
+    border-style: solid;
+    border-radius: 30px;
+    position: absolute;
+}
+
+#VIP {
+    margin-left: 65%;
+    margin-right: 10%;
+    margin-top: 4%;
+    border-width: 3px;
+    border-style: solid;
+    border-radius: 30px;
+    position: absolute;
+}
+
+button {
     letter-spacing: 3px;
     font-size: 150%;
     border-radius: 50px;
     padding: 1%;
     text-align: center;
     border-style: solid;
-    border-width: 1px;
+    border-width: 4px;
     font-weight: bold;
     font-family: "Oswald", sans-serif;
 }
-button:hover{
-    background-color: coral;
 
+button:hover {
+    background-color: coral;
 }
-#index_introduction_logo{
+
+#index_introduction_logo {
     width: 20%;
     margin-top: 1.5%;
-    margin-left: 11%;
+    margin-left: 5%;
     position: absolute;
 }
+
 #main_menu {
     color: white;
     margin-left: 0%;
     float: right;
     font-size: 120%;
-    list-style:none ;
+    list-style: none;
     padding-right: 10%;
     padding-top: 2%;
 }
+
 #main_menu:hover {
     text-decoration: underline;
 }
-    
-
-
-
-    
