--- a/styling/style.css
+++ b/styling/style.css
@@ -1,5 +1,5 @@
 * {
-    box-sizing: border-box
+    box-sizing: border-box;
 }
 
 
@@ -108,24 +108,26 @@
 
 @-webkit-keyframes fade {
     from {
-        opacity: .4
+        opacity: 0.4;
     }
     to {
-        opacity: 1
+        opacity: 1;
     }
 }
 
 @keyframes fade {
     from {
-        opacity: .4
+        opacity: 0.4;
     }
     to {
-        opacity: 1
+        opacity: 1;
     }
 }
 
 body {
     background-color: black;
+    background-image: url(../Sales_Forecasting/Resources/background.webp);
+    background-size: contain;
 }
 
 #mySlidesfade {}
@@ -261,6 +263,14 @@ footer {
     margin-top: 2%;
     margin-left: 30%;
     margin-right: 30%;
+}
+
+#main {
+    text-align: center;
+}
+
+img {
+    width: 20%;
 }
 
 .mainbackground {
