--- a/Sales_Forecasting/styles/sign_inUI_Style.css
+++ b/Sales_Forecasting/styles/sign_inUI_Style.css
@@ -1,5 +1,7 @@
 body {
     background-image: url("../Resources/background.webp");
+    background-repeat: repeat;
+    background-size: contain;
 }
 
 
