--- a/Sales_Forecasting/styles/sign_inUI_Style.css
+++ b/Sales_Forecasting/styles/sign_inUI_Style.css
@@ -75,6 +75,22 @@ h1 {
 #reg_btn:hover {
     background-color: coral;
 }
+.submit_email{
+
+    margin-top: 10%;
+    color: white;
+    letter-spacing: 3px;
+    border-radius: 50px;
+    text-align: center;
+    border-style: solid;
+    border-width: 1px;
+    font-weight: bold;
+    font-family: "Oswald", sans-serif;
+    font-size: 150%;
+    padding: 5px;
+    margin-left: 50%;
+    margin-right: 10%;
+}
 
 #signin_btn {
     margin-top: 10%;
