Search history button

--- a/Sales_Forecasting/styles/mainUI_Style.css
+++ b/Sales_Forecasting/styles/mainUI_Style.css
@@ -158,7 +158,57 @@ li {
     background-color: coral;
 }
 
-
+/* Dropdown Button */
+.dropbtn {
+    background-color: #565856;
+    color: white;
+    padding: 15px;
+    font-size: 16px;
+    border: none;
+    margin-top: 25%;
+    margin-left: 165%;
+      border-radius: 25%;
+     font-family: "Oswald", sans-serif;
+  }
+  
+  /* The container <div> - needed to position the dropdown content */
+  .dropdown {
+      margin-left: -5%;
+    position: fixed;
+    display: inline-block;
+   
+  }
+  
+  /* Dropdown Content (Hidden by Default) */
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 225%;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    margin-top: 0%;
+    margin-left: 165%;
+    font-family: "Oswald", sans-serif;
+   
+  }
+  
+  /* Links inside the dropdown */
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  /* Change color of dropdown links on hover */
+  .dropdown-content a:hover {background-color: #ddd;}
+  
+  /* Show the dropdown menu on hover */
+  .dropdown:hover .dropdown-content {display: block;}
+  
+  /* Change the background color of the dropdown button when the dropdown content is shown */
+  .dropdown:hover .dropbtn {background-color: #5e615e;}
 /* Code that allows for smaller screen opperation*/
 
 @media screen and (max-width: 1000px) {
